fix: z-index fixed

--- a/src/components/ui/primitives/card/card.module.scss
+++ b/src/components/ui/primitives/card/card.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 
   padding: 34px 36px 24px;
 
